name:                hkd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hkd#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  ghc-options:         -Wall -haddock
  other-modules:       
  exposed-modules:     HKD
                     , InbetweenHKD
                     , WithoutHKD 
                     , WithHKD
  default-language:    Haskell2010
  build-depends:       base